<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeBottomMainMenu"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/coffeeBottomMainMenu"
        android:icon="@drawable/coffee"
        android:title="@string/coffee"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/cardBottomMainMenu"
        android:icon="@drawable/card"
        android:title="@string/card"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/accountBottomMainMenu"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom"/>

</menu>