<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProposalTwo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardProposalOne"
                android:layout_width="336dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:strokeWidth="1dp"
                app:strokeColor="@android:color/white"
                app:cardElevation="0dp"
                android:focusable="true"
                android:checkable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@drawable/proposal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/propTwoSale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="10dp"
                        android:text="@string/salePropTwo"
                        android:textColor="@android:color/holo_red_dark"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/propTwoHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/propTwoSale"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="10dp"
                        android:text="@string/headerPropTwo"
                        android:textColor="@color/orange"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/propTwoHeader"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="10dp"
                        android:text="@string/descriptionProposal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</layout>
